reformats the notebooks using black

--- a/2021-archive/notebooks/class-1.ipynb
+++ b/2021-archive/notebooks/class-1.ipynb
@@ -39,10 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linsolve(\n",
-    "    [u*x + y + z - 1, x + u*y + z - u, x + y + u*z - u**2],\n",
-    "    (x, y, z)\n",
-    ")"
+    "linsolve([u * x + y + z - 1, x + u * y + z - u, x + y + u * z - u**2], (x, y, z))"
    ]
   },
   {
