--- a/2021-archive/notebooks/spring-class-6.ipynb
+++ b/2021-archive/notebooks/spring-class-6.ipynb
@@ -28,8 +28,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "A = np.array([[0.39,-1.89], [0.61,-1.80], [0.93,-1.68], [1.35,-1.50]])\n",
-    "beta = np.array([1,1,1,1])\n",
+    "A = np.array([[0.39, -1.89], [0.61, -1.80], [0.93, -1.68], [1.35, -1.50]])\n",
+    "beta = np.array([1, 1, 1, 1])\n",
     "\n",
     "sol = np.linalg.inv(A.T @ A) @ A.T @ beta"
    ]
