--- a/2021-archive/notebooks/计算习题课成绩.ipynb
+++ b/2021-archive/notebooks/计算习题课成绩.ipynb
@@ -18,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_me = pd.read_excel(\"./2022春高等代数作业成绩.xlsx\", sheet_name=None, header=None, engine=\"openpyxl\")"
+    "df_me = pd.read_excel(\n",
+    "    \"./2022春高等代数作业成绩.xlsx\", sheet_name=None, header=None, engine=\"openpyxl\"\n",
+    ")"
    ]
   },
   {
@@ -51,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_total = df_total[df_total.学号>=21231131]\n",
+    "df_total = df_total[df_total.学号 >= 21231131]\n",
     "df_total.set_index(\"学号\", inplace=True)\n",
     "df_total"
    ]
@@ -71,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_marks = df_total[list(range(1,11))].applymap(lambda s: {\"√\":np.nan}.get(s,s))\n",
+    "df_marks = df_total[list(range(1, 11))].applymap(lambda s: {\"√\": np.nan}.get(s, s))\n",
     "df_marks"
    ]
   },
@@ -93,7 +95,10 @@
    "outputs": [],
    "source": [
     "for k, df in df_me.items():\n",
-    "    df[\"成绩\"] = df[\"成绩\"].apply(lambda s: min_val + (max_val-min_val)*(s-df[\"成绩\"].min())/(df[\"成绩\"].max()-df[\"成绩\"].min()))"
+    "    df[\"成绩\"] = df[\"成绩\"].apply(\n",
+    "        lambda s: min_val\n",
+    "        + (max_val - min_val) * (s - df[\"成绩\"].min()) / (df[\"成绩\"].max() - df[\"成绩\"].min())\n",
+    "    )"
    ]
   },
   {
@@ -103,7 +108,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping = {1: \"前四周\",2: \"前四周\",3: \"前四周\",4: \"前四周\",5: \"第五周\",6:\"第六周\",7:\"第七周\",8:\"第八周\",10:\"第十周\"}"
+    "mapping = {\n",
+    "    1: \"前四周\",\n",
+    "    2: \"前四周\",\n",
+    "    3: \"前四周\",\n",
+    "    4: \"前四周\",\n",
+    "    5: \"第五周\",\n",
+    "    6: \"第六周\",\n",
+    "    7: \"第七周\",\n",
+    "    8: \"第八周\",\n",
+    "    10: \"第十周\",\n",
+    "}"
    ]
   },
   {
@@ -124,7 +139,7 @@
    "outputs": [],
    "source": [
     "for sid, row in df_total_copy.iterrows():\n",
-    "    for col in [s for s in range(1,11) if s != 9]:\n",
+    "    for col in [s for s in range(1, 11) if s != 9]:\n",
     "        if row[col] == \"√\":\n",
     "            try:\n",
     "                df_total_copy.at[sid, col] = df_me[mapping[col]].loc[sid, \"成绩\"]\n",
@@ -149,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_total = df_total.applymap(lambda s: {\"√\":np.nan}.get(s,s))"
+    "df_total = df_total.applymap(lambda s: {\"√\": np.nan}.get(s, s))"
    ]
   },
   {
@@ -159,9 +174,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_total[\"习题课成绩\"] = df_total[list(range(1,11))].mean(axis=1, skipna=True, numeric_only=True) - df_total.缺交次数*0.4\n",
+    "df_total[\"习题课成绩\"] = (\n",
+    "    df_total[list(range(1, 11))].mean(axis=1, skipna=True, numeric_only=True)\n",
+    "    - df_total.缺交次数 * 0.4\n",
+    ")\n",
     "df_total[\"习题课成绩\"] += df_total[\"11（自愿交）\"].apply(lambda s: 0 if np.isnan(s) else 0.5)\n",
-    "df_total[\"习题课成绩\"] = df_total[\"习题课成绩\"].apply(lambda s: min(100, int(10*s)))"
+    "df_total[\"习题课成绩\"] = df_total[\"习题课成绩\"].apply(lambda s: min(100, int(10 * s)))"
    ]
   },
   {
