--- a/notebooks/class-1.ipynb
+++ b/notebooks/class-1.ipynb
@@ -16,13 +16,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install sympy"
+    "# !pip install sympy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "aae5d8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774f5715",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,17 +56,39 @@
     "import numpy as np\n",
     "import sympy as sp\n",
     "\n",
-    "def LagrangePolynomial(xs, ys):\n",
+    "\n",
+    "def LagrangePolynomial(\n",
+    "    xs: np.ndarray, ys: np.ndarray, to_poly: bool = True\n",
+    ") -> Union[sp.Poly, sp.Add]:\n",
+    "    \"\"\"\n",
+    "    computes the Lagrange polynomial of the given points\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    xs, ys: np.ndarray,\n",
+    "        the points\n",
+    "    to_poly: bool, default True,\n",
+    "        whether to convert the result to sympy.Poly\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    poly: sympy.Poly or sympy.Add,\n",
+    "        the Lagrange polynomial of the given points\n",
+    "\n",
+    "    \"\"\"\n",
     "    X = sp.symbols(\"x\")\n",
-    "    assert len(xs) == len(ys)\n",
-    "    y = 0\n",
+    "    assert len(xs) == len(ys), \"The length of `xs` and `ys` must be equal\"\n",
+    "    poly = 0\n",
     "    for k in range(len(xs)):\n",
     "        t = 1\n",
     "        for j in range(len(xs)):\n",
     "            if j != k:\n",
-    "                t = t * ( (X - xs[j]) / (xs[k] - xs[j]) )\n",
-    "        y += t * ys[k]\n",
-    "    return sp.simplify(y)"
+    "                t = t * ((X - xs[j]) / (xs[k] - xs[j]))\n",
+    "        poly += t * ys[k]\n",
+    "    poly = sp.simplify(poly)\n",
+    "    if to_poly:\n",
+    "        poly = sp.Poly(poly, X)\n",
+    "    return poly"
    ]
   },
   {
@@ -113,7 +146,7 @@
     "import sympy as sp\n",
     "from sympy.solvers.solveset import linsolve\n",
     "\n",
-    "x, y, z, u = sp.symbols(\"x,y,z,u\")"
+    "x, y, z, u = sp.symbols(\"x, y, z, u\")"
    ]
   },
   {
@@ -123,10 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linsolve(\n",
-    "    [u*x + y + z - 1, x + u*y + z - u, x + y + u*z - u**2],\n",
-    "    (x, y, z)\n",
-    ")"
+    "linsolve([u * x + y + z - 1, x + u * y + z - u, x + y + u * z - u**2], (x, y, z))"
    ]
   },
   {
