--- a/notebooks/class-7.ipynb
+++ b/notebooks/class-7.ipynb
@@ -30,30 +30,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def polyn_determinant(f: Union[sp.Add, sp.Poly], x: sp.Symbol) -> Union[sp.Add, sp.Number]:\n",
+    "def polyn_determinant(\n",
+    "    f: Union[sp.Add, sp.Poly], x: sp.Symbol\n",
+    ") -> Union[sp.Add, sp.Number]:\n",
     "    \"\"\"\n",
     "    computes the determinant of a univariate polynomial\n",
-    "    \n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    f: sympy.Add or sympy.Poly,\n",
     "        the univariate polynomial\n",
     "    x: sympy.Symbol,\n",
     "        the variable\n",
-    "        \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    pol_det: sp.Add or sp.Number,\n",
     "        the determinant of the input univariate polynomial `f`\n",
-    "    \n",
+    "\n",
     "    \"\"\"\n",
     "    f = sp.Poly(f, x)\n",
     "    f_prime = sp.diff(f, x)\n",
     "    leading_coeff = f.coeffs()[0]\n",
     "    n = f.degree()\n",
-    "    pol_det = sp.resultant(f, f_prime, x) * (-1)**(n*(n-1)//2) / leading_coeff\n",
+    "    pol_det = sp.resultant(f, f_prime, x) * (-1) ** (n * (n - 1) // 2) / leading_coeff\n",
     "    pol_det = sp.simplify(pol_det)\n",
-    "    return pol_det"
+    "    return pol_det\n",
+    "\n",
+    "\n",
+    "def sylvester_mat(\n",
+    "    f: Union[sp.Add, sp.Poly],\n",
+    "    g: Union[sp.Add, sp.Poly],\n",
+    "    x: sp.Symbol,\n",
+    ") -> sp.Matrix:\n",
+    "    \"\"\"\n",
+    "    computes the Sylvester matrix of two univariate polynomials\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    f, g: sympy.Add or sympy.Poly,\n",
+    "        the two univariate polynomials\n",
+    "    x: sympy.Symbol,\n",
+    "        the variable\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    mat: sympy.Matrix,\n",
+    "        the Sylvester matrix of `f` and `g`\n",
+    "\n",
+    "    \"\"\"\n",
+    "    f, g = sp.Poly(f, x), sp.Poly(g, x)\n",
+    "    n, m = f.degree(), g.degree()\n",
+    "    f_coeffs = f.all_coeffs()\n",
+    "    g_coeffs = g.all_coeffs()\n",
+    "    mat = sp.zeros(n + m, n + m)\n",
+    "    for idx in range(m):\n",
+    "        mat[idx : idx + n + 1, idx] = f_coeffs\n",
+    "    for idx in range(n):\n",
+    "        mat[idx : idx + m + 1, m + idx] = g_coeffs\n",
+    "    return mat"
    ]
   },
   {
