--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -40,63 +40,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import reduce\n",
-    "from typing import Sequence, Union\n",
-    "from numbers import Number\n",
-    "\n",
-    "\n",
-    "def vandermonde_det(arr: Sequence[Number]) -> Number:\n",
-    "    return reduce(lambda a, b: a * b, [(arr[j] - arr[i]) for i in range(len(arr)-1) for j in range(i+1, len(arr))])\n",
-    "\n",
-    "\n",
-    "def vandermonde_mat(arr: Sequence[Number], latex: bool = False) -> Union[str, Number]:\n",
-    "    n = len(arr)\n",
-    "    mat = sp.Matrix(n, n, [item**i for i in range(n) for item in arr])\n",
-    "    if latex:\n",
-    "        return sp.latex(mat)\n",
-    "    return mat\n",
-    "\n",
-    "\n",
-    "def circulant_mat(arr: Sequence[Number]) -> Number:\n",
-    "    n = len(arr)\n",
-    "    mat = np.vstack([np.concatenate((arr[i:], arr[:i])) for i in range(n)])\n",
-    "    mat = sp.Matrix(mat)\n",
-    "    return mat\n",
-    "\n",
-    "\n",
-    "def circulant_det(arr: Sequence[Number]) -> Number:\n",
-    "    # n = len(arr)\n",
-    "    # u = sp.exp(2 * sp.pi * complex(0, 1) / n)\n",
-    "    # sp_arr = sp.Matrix(n, 1, arr)\n",
-    "    # mat = sp.Matrix(n, n, [pow(pow(u, i), j) for i in range(n) for j in range(n)])\n",
-    "    # return reduce(lambda a, b: a * b, mat @ sp_arr)\n",
-    "    return circulant_mat(arr).det()\n",
-    "\n",
-    "\n",
-    "def polyn_determinant(f: Union[sp.Add, sp.Poly], x: sp.Symbol) -> Union[sp.Add, sp.Number]:\n",
-    "    \"\"\"\n",
-    "    computes the determinant of a univariate polynomial\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    f: sympy.Add or sympy.Poly,\n",
-    "        the univariate polynomial\n",
-    "    x: sympy.Symbol,\n",
-    "        the variable\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    pol_det: sympy.Add or sympy.Number,\n",
-    "        the determinant of the input univariate polynomial `f`\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    f = sp.Poly(f, x)\n",
-    "    f_prime = sp.diff(f, x)\n",
-    "    leading_coeff = f.coeffs()[0]\n",
-    "    n = f.degree()\n",
-    "    pol_det = sp.resultant(f, f_prime, x) * (-1)**(n*(n-1)//2) / leading_coeff\n",
-    "    pol_det = sp.simplify(pol_det)\n",
-    "    return pol_det"
+    "# import functions\n",
+    "from functions import (\n",
+    "    vandermonde_mat,\n",
+    "    vandermonde_det,\n",
+    "    circulant_mat,\n",
+    "    circulant_det,\n",
+    "    sylvester_mat,\n",
+    "    polyn_determinant,\n",
+    "    LagrangePolynomial,\n",
+    ")"
    ]
   },
   {
@@ -244,7 +197,9 @@
    "outputs": [],
    "source": [
     "# (2)\n",
-    "mat = sp.Matrix(4, 5, [1, 1, 1, 1, -4, 1, -2, 3, -4, 2, -1, 3, -5, 7, -4, 1, 2, -1, 4, -6])\n",
+    "mat = sp.Matrix(\n",
+    "    4, 5, [1, 1, 1, 1, -4, 1, -2, 3, -4, 2, -1, 3, -5, 7, -4, 1, 2, -1, 4, -6]\n",
+    ")\n",
     "b = sp.Matrix(np.zeros((4, 1)))\n",
     "\n",
     "x, params, free_var_index = mat.gauss_jordan_solve(b, freevar=True)\n",
@@ -486,19 +441,7 @@
    "id": "6316629c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def LagrangePolynomial(xs, ys):\n",
-    "    X = sp.symbols(\"x\")\n",
-    "    assert len(xs) == len(ys)\n",
-    "    y = 0\n",
-    "    for k in range(len(xs)):\n",
-    "        t = 1\n",
-    "        for j in range(len(xs)):\n",
-    "            if j != k:\n",
-    "                t = t * ( (X - xs[j]) / (xs[k] - xs[j]) )\n",
-    "        y += t * ys[k]\n",
-    "    return sp.simplify(y)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -510,7 +453,7 @@
     "xs = np.array([1, 2, 3])\n",
     "ys = np.array([1, 2, 4])\n",
     "\n",
-    "LagrangePolynomial(xs, ys)"
+    "LagrangePolynomial(xs, ys, False)"
    ]
   },
   {
@@ -651,13 +594,26 @@
     "# (5)\n",
     "a, b, c, d = sp.symbols(\"a, b, c, d\")\n",
     "A = sp.Matrix(\n",
-    "    4, 4,\n",
+    "    4,\n",
+    "    4,\n",
     "    [\n",
-    "        a, b, c, d,\n",
-    "        a, a+b, a+b+c, a+b+c+d,\n",
-    "        a, 2*a+b, 3*a+2*b+c, 4*a+3*b+2*c+d,\n",
-    "        a, 3*a+b, 6*a+3*b+c, 10*a+6*b+3*c+d,\n",
-    "    ]\n",
+    "        a,\n",
+    "        b,\n",
+    "        c,\n",
+    "        d,\n",
+    "        a,\n",
+    "        a + b,\n",
+    "        a + b + c,\n",
+    "        a + b + c + d,\n",
+    "        a,\n",
+    "        2 * a + b,\n",
+    "        3 * a + 2 * b + c,\n",
+    "        4 * a + 3 * b + 2 * c + d,\n",
+    "        a,\n",
+    "        3 * a + b,\n",
+    "        6 * a + 3 * b + c,\n",
+    "        10 * a + 6 * b + 3 * c + d,\n",
+    "    ],\n",
     ")\n",
     "A.det()"
    ]
@@ -747,7 +703,7 @@
    "source": [
     "lam = sp.symbols(\"lambda\")\n",
     "# (1)\n",
-    "mat1 = sp.Matrix(2, 2, [1+lam, 1-lam, 1-lam, 1+lam])\n",
+    "mat1 = sp.Matrix(2, 2, [1 + lam, 1 - lam, 1 - lam, 1 + lam])\n",
     "# (2)\n",
     "mat2 = sp.Matrix(3, 3, [lam, 1, 0, 1, lam, 1, 0, 1, lam])\n",
     "# (3)\n",
@@ -917,10 +873,7 @@
    "outputs": [],
    "source": [
     "# (2)\n",
-    "A = sp.Matrix(\n",
-    "    4, 4,\n",
-    "    [1, 5, 3, 0, 0, 4, 6, 2, 0, 0, 9, 1, 0, 0, 0, 1]\n",
-    ")\n",
+    "A = sp.Matrix(4, 4, [1, 5, 3, 0, 0, 4, 6, 2, 0, 0, 9, 1, 0, 0, 0, 1])\n",
     "A.inv()"
    ]
   },
@@ -1049,7 +1002,7 @@
    "outputs": [],
    "source": [
     "x = sp.symbols(\"x\")\n",
-    "f = x**3 - 2* x**2 + 2 * x - 1\n",
+    "f = x**3 - 2 * x**2 + 2 * x - 1\n",
     "g = x**4 - x**3 + 2 * x**2 - x + 1\n",
     "\n",
     "sp.gcdex(f, g, x, domain=sp.QQ)"
@@ -1081,7 +1034,7 @@
     "# (1)\n",
     "x = sp.symbols(\"x\")\n",
     "f = x**3\n",
-    "g = (x - 3)**2\n",
+    "g = (x - 3) ** 2\n",
     "\n",
     "sp.gcdex(f, g, x, domain=sp.QQ)"
    ]
@@ -1096,7 +1049,7 @@
     "# (2)\n",
     "x = sp.symbols(\"x\")\n",
     "f = x**3 - 3\n",
-    "g = x**2 - 2 * x +3\n",
+    "g = x**2 - 2 * x + 3\n",
     "\n",
     "sp.gcdex(f, g, x, domain=sp.QQ)"
    ]
@@ -1133,7 +1086,7 @@
    "outputs": [],
    "source": [
     "x = sp.symbols(\"x\")\n",
-    "f = sum([x**(3*n) for n in range(7)])\n",
+    "f = sum([x ** (3 * n) for n in range(7)])\n",
     "\n",
     "sp.factor(f, x, domain=sp.QQ)"
    ]
@@ -1170,7 +1123,7 @@
    "outputs": [],
    "source": [
     "x, p, q = sp.symbols(\"x, p, q\")\n",
-    "f = x**3 + p*x + q\n",
+    "f = x**3 + p * x + q\n",
     "\n",
     "polyn_determinant(f, x)"
    ]
