fix typos in functions.py and in notebooks

--- a/notebooks/class-7.ipynb
+++ b/notebooks/class-7.ipynb
@@ -30,11 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def polyn_determinant(\n",
+    "def polyn_discriminant(\n",
     "    f: Union[sp.Add, sp.Poly], x: sp.Symbol\n",
     ") -> Union[sp.Add, sp.Number]:\n",
     "    \"\"\"\n",
-    "    computes the determinant of a univariate polynomial\n",
+    "    computes the discriminant of a univariate polynomial\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -45,8 +45,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    pol_det: sp.Add or sp.Number,\n",
-    "        the determinant of the input univariate polynomial `f`\n",
+    "    pol_det: sympy.Add or sympy.Number,\n",
+    "        the discriminant of the input univariate polynomial `f`\n",
     "\n",
     "    \"\"\"\n",
     "    f = sp.Poly(f, x)\n",
@@ -132,8 +132,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polyn_determinant(a * x**2 + b * x + c, x)"
+    "polyn_discriminant(a * x**2 + b * x + c, x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b4c78f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.Poly(a * x**2 + b * x + c, x).discriminant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bc587d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -150,8 +168,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polyn_determinant(x**3 + p * x + q, x)"
+    "polyn_discriminant(x**3 + p * x + q, x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16ec51ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.Poly(x**3 + p * x + q, x).discriminant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0508828c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,8 +204,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polyn_determinant(a * x**3 + b * x**2 + c * x + d, x)"
+    "polyn_discriminant(a * x**3 + b * x**2 + c * x + d, x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be322c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.Poly(a * x**3 + b * x**2 + c * x + d, x).discriminant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "626492e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -186,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polyn_determinant(a * x**4 + b * x**3 + c * x**2 + d * x + e, x)"
+    "polyn_discriminant(a * x**4 + b * x**3 + c * x**2 + d * x + e, x)"
    ]
   },
   {
@@ -195,12 +249,22 @@
    "id": "7bf19ff6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sp.Poly(a * x**4 + b * x**3 + c * x**2 + d * x + e, x).discriminant()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3eee2f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f36967b",
    "metadata": {},
    "outputs": [],
    "source": []
