--- a/notebooks/习题.ipynb
+++ b/notebooks/习题.ipynb
@@ -47,7 +47,7 @@
     "    circulant_mat,\n",
     "    circulant_det,\n",
     "    sylvester_mat,\n",
-    "    polyn_determinant,\n",
+    "    polyn_discriminant,\n",
     "    LagrangePolynomial,\n",
     ")"
    ]
@@ -1123,9 +1123,19 @@
    "outputs": [],
    "source": [
     "x, p, q = sp.symbols(\"x, p, q\")\n",
-    "f = x**3 + p * x + q\n",
+    "f = sp.Poly(x**3 + p * x + q, x)\n",
     "\n",
-    "polyn_determinant(f, x)"
+    "polyn_discriminant(f, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a3cd658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.discriminant()"
    ]
   },
   {
