fix typos and change to the handout layout

--- a/main.tex
+++ b/main.tex
@@ -27,9 +27,9 @@
 \IncludeAnswertrue
 % \IncludeAnswerfalse
 
-\NewPagetrue
+\NewPagefalse
 
-\LargeLayouttrue
+\LargeLayoutfalse
 
 \ifNewPage
 \newcommand{\newpageorvspace}{\newpage}
