--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -75,7 +75,7 @@ r_3(x) & = r_2(x) - {\color{red} 6} \cdot g(x) = - x - 1 - 6 (- 4x + 1) = 23 x -
 
 \newpageorvspace
 
-{\bf 第二题} (习题5.4第6题) 求多项式$x^3 + px + q$有重根的条件.
+{\bf 第二题} (习题5.4第6题) 求多项式$x^3 + px + q$有重根的条件。
 
 Hint: 这题考察了 ``5.4.2 重因式与重根'' 的知识。
 
@@ -104,13 +104,19 @@ r_2(x) & = f'(x) - {\color{red} \left( \dfrac{9}{2p}x - \dfrac{27q}{4p^2} \right
 \item $\Delta < 0 \Rightarrow$ $f(x)$在$\mathbb{R}$内无实根，但在$\mathbb{C}$内有两个共轭（不同）的虚根。
 \end{itemize}
 
-设$f(x) = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0},$ $a_n \neq 0,$ 系数属于某个域$\mathbb{F},$ 那么它的判别式定义为
-$$\operatorname{Disc}_x(f) = a_n^{2n-2} \prod_{\substack{1 \leqslant i < j \leqslant n \\ f(\lambda_i) = 0}} (\lambda_i - \lambda_j)^2 \in \mathbb{F}.$$
-判别式可以利用多项式$f$与它的微商$f'$的结式（resultant）进行计算。设
+设$n$次多项式
 $$
-g(x) = b_{m}x^{m} + b_{m1}x^{m-1} + \cdots + b_{0}
+f(x) = a_{n}x^{n} + a_{n-1}x^{n-1} + \cdots + a_{0}, ~ a_n \neq 0,
 $$
-是另一个系数在域$\mathbb{F}$内的多项式，那么$f, g$的结式被定义为
+系数属于某个域$\mathbb{F},$ 那么它的判别式定义为
+$$\operatorname{Disc}_x(f) = a_n^{2n-2} \prod_{1 \leqslant i < j \leqslant n} (\lambda_i - \lambda_j)^2 \in \mathbb{F}.$$
+这里的$\lambda_1, \ldots, \lambda_n$为$f(x)$在代数闭域$\bar{\mathbb{F}}$内的根。
+
+多项式$f$的判别式可以利用多项式$f$与它的微商$f'$的结式（resultant）进行计算。一般地，设
+$$
+g(x) = b_{m}x^{m} + b_{m-1}x^{m-1} + \cdots + b_{0}, ~ b_m \neq 0,
+$$
+是另一个系数在域$\mathbb{F}$内的$m$次多项式，那么$f, g$的结式被定义为
 $$
 \operatorname{Res} (f, g) = a_n^n b_m^m \prod_{ \substack{(\lambda, \mu) \in \bar{\mathbb{F}}^2 \\ f(\lambda) = 0, g(\mu) = 0}} (\lambda - \mu) \in \mathbb{F}
 $$
