--- a/content/class-7.tex
+++ b/content/class-7.tex
@@ -113,6 +113,7 @@ $$\operatorname{Disc}_x(f) = a_n^{2n-2} \prod_{1 \leqslant i < j \leqslant n} (\
 这里的$\lambda_1, \ldots, \lambda_n$为$f(x)$在代数闭域$\bar{\mathbb{F}}$内的根。
 
 多项式$f$的判别式可以利用多项式$f$与它的微商$f'$的结式（resultant）进行计算。一般地，设
+多项式$f$的判别式可以利用多项式$f$与它的微商$f'$的结式（resultant）进行计算。一般地，设
 $$
 g(x) = b_{m}x^{m} + b_{m-1}x^{m-1} + \cdots + b_{0}, ~ b_m \neq 0,
 $$
