--- a/main.tex
+++ b/main.tex
@@ -27,9 +27,9 @@
 \IncludeAnswertrue
 % \IncludeAnswerfalse
 
-\NewPagefalse
+\NewPagetrue
 
-\LargeLayoutfalse
+\LargeLayouttrue
 
 \ifNewPage
 \newcommand{\newpageorvspace}{\newpage}
@@ -43,7 +43,8 @@
 % \input{content/class-4.tex}
 % \input{content/class-5.tex}
 % \input{content/class-6.tex}
-\input{content/class-7.tex}
+% \input{content/class-7.tex}
+\input{content/class-8.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
