--- a/content/class-8.tex
+++ b/content/class-8.tex
@@ -64,7 +64,8 @@ $$b_m, b_{m-1}, \ldots, b_0,$$
 $$d_m > d_{m-1} > \cdots > d_0.$$
 定义
 \begin{align*}
-s(f) & := \sum\limits_{i=0}^{m-1} \dfrac{1}{2} \left\lvert \dfrac{|b_{i+1}|}{b_{i+1}} - \dfrac{|b_{i}|}{b_{i}} \right\rvert \\
+s(f) & := \sum\limits_{i=1}^{m} \dfrac{1}{2} \left\lvert \dfrac{|b_{i}|}{b_{i}} - \dfrac{|b_{i-1}|}{b_{i-1}} \right\rvert \\
+& = \# \{ i ~|~ 1 \leqslant i \leqslant m, ~ b_{i}b_{i-1} < 0 \} \\
 p(f) & := \text{$f(x)$的正实根数量}
 \end{align*}
 （重根计算重数）那么
@@ -74,7 +75,8 @@ $$2 | (s(f) - p(f)) \geqslant 0.$$
 将此结论应用到多项式$f(-x)$上，可得出$f(x)$负实根数目的结论：
 $$2 | (s'(f) - p'(f)) \geqslant 0,$$
 \begin{align*}
-s'(f) & := \sum\limits_{i=0}^{m-1} \dfrac{1}{2} \left\lvert (-1)^{d_{i+1}}\dfrac{|b_{i+1}|}{b_{i+1}} - (-1)^{d_{i}}\dfrac{|b_{i}|}{b_{i}} \right\rvert \\
+s'(f) & := \sum\limits_{i=1}^{m} \dfrac{1}{2} \left\lvert (-1)^{d_{i}}\dfrac{|b_{i}|}{b_{i}} - (-1)^{d_{i-1}}\dfrac{|b_{i-1}|}{b_{i-1}} \right\rvert \\
+& = \# \{ i ~|~ 1 \leqslant i \leqslant m, ~ (-1)^{d_i+d_{i-1}}b_{i}b_{i-1} < 0 \} \\
 p'(f) & := \text{$f(x)$的负实根数量}
 \end{align*}
 
@@ -86,7 +88,9 @@ p'(f) & := \text{$f(x)$的负实根数量}
 $$f(x) = (x-a)(x-b)(x-c) = x^3 - (a+b+c)x^2 + (ab+ac+bc)x -abc.$$
 其非零系数按降幂排列为
 $$1, - (a+b+c), ab+ac+bc, -abc,$$
-这个序列的符号变化次数为3，从而知其正实根数目为3或1. 而考察序列
+这个序列的符号为
+$$+, ~ -, ~ +, ~-,$$
+变号次数为3，从而知其正实根数目为3或1. 而考察序列
 $$1\cdot(-1)^3, - (a+b+c)\cdot(-1)^2, (ab+ac+bc)\cdot(-1)^1, -abc\cdot(-1)^0$$
 即序列
 $$-1, - (a+b+c), -(ab+ac+bc), -abc$$
@@ -104,15 +108,23 @@ $$f(x) = a_{n+1}x^{n+1} + a_nx^n + \cdots + a_1x + a_0, ~~ a_{n+1}, a_0 \neq 0.$
 $$2 | s(g) - p(g).$$
 我们不妨设$a_n \neq 0.$ 由于$s(g) - p(g)$是一个偶数，那么$s(g), p(g)$必须同时是偶数或者同时是奇数。我们分情况讨论。
 
-情况1. $s(g), p(g)$同时为偶数。那么由于$s(f)$为偶数，$a_n$必须与$a_0$同号。
+情况1. $s(g), p(g)$同时为偶数。那么由于$s(g)$为偶数，即序列$a_n, \ldots, a_1, a_0$变号次数为偶数，因此$a_n$必须与$a_0$同号。
 
-情况1.1 $a_{n+1}, a_n, a_0$都是正实数。由于$a_{n+1}, a_n$同号，所以$s(f) = s(g).$ 由于最高次项系数$a_{n+1}$与常数项$a_0$同号，所以$f(x)$的正实根数目$p(f)$为偶数（需要证明）。于是$2 | s(f) - p(f).$
+情况1.1 $a_{n+1}, a_n, a_0$都是正实数。由于$a_{n+1}, a_n$同号，所以$s(f) = s(g).$ 由于最高次项系数$a_{n+1}$与常数项$a_0$同号，所以$f(x)$的正实根数目$p(f)$为偶数（随后证明）。于是$2 | s(f) - p(f).$
 
 情况1.2 $a_{n+1}$是负实数，$a_n, a_0$都是正实数。此时$a_{n+1}, a_n$异号，$s(f) = s(g) + 1$为奇数。由于最高次项系数$a_{n+1}$与常数项$a_0$异号，$f(x)$的正实根数目$p(f)$为奇数。于是依然有$2 | s(f) - p(f).$
 
 情况1.3 $a_{n+1}$是正实数，$a_n, a_0$都是负实数；情况1.4 $a_{n+1}$是负实数，$a_n, a_0$都是负实数；以及情况2. $s(g), p(g)$同时为奇数的相应的4种情况都能类似证明有$2 | s(f) - p(f).$
 
-最后，我们需要证明$s(f) - p(f) \geqslant 0.$ 考虑$f(x)$的微商$f'(x).$ 它是一个$n$次实系数多项式，而且系数符号都不变（除了$a_0$变为0）。于是$s(f) = s(f') + 1,$ 或者$s(f) = s(f').$ 另一方面，由于$f(x)$有$p(f)$个正实根。当其中有$k > 1$个互异实根，它们构成了$k - 1$个闭区间。由微分中值定理，这些区间上都至少有一个点满足$f'(x) = 0.$ 而对于其中的每个$k$重根($k > 1$)都是$f'(x)$的至少$k-1$重根。于是有$p(f') \geqslant p(f) - 1.$ 当$p(f) \leqslant 1$时，$p(f') \geqslant p(f) - 1$平凡成立。对$f'(x)$用归纳假设，有
+现在我们来证明，若$n+1$次多项式$f(x)$的最高次项系数$a_{n+1}$与常数项$a_0$同号，则$f(x)$的正实根数目为偶数。将$f(x)$的互不相等的正实根按从小到大排列为
+$$0 < \lambda_1 < \lambda_2 < \cdots < \lambda_m,$$
+对应的重数分别为$n_1, n_2, \ldots, n_m.$ 容易看出在$x \in [0, +\infty)$内，$f(x)$的值只有可能在$\lambda_1, \ldots, \lambda_m$附近变号。对$1 \leqslant i \leqslant m$有
+$$f(x) = (x - \lambda_i)^{n_i} g_i(x),$$
+$g_i(x)$在$\lambda_i$的某个小邻域内非零（从而是恒正或者恒负的）。若$n_i$为偶数，那么在这个小领域内，$f(x)$的值恒非负或者恒非正，不变号。类似可知，若$n_i$为奇数，则多项式$f(x)$在$\lambda_i$的某个小邻域内变号一次。$f(x)$的最高次项系数$a_{n+1}$与常数项$a_0$同号,所以要么$f(0) < 0, \lim\limits_{x\to+\infty} f(x) = -\infty$ (对应$a_{n+1}, a_0$同负) 或者$f(0) > 0, \lim\limits_{x\to+\infty} f(x) = +\infty$ (对应$a_{n+1}, a_0$同正)。那么$f(x)$的值在$x \in [0, +\infty)$内需要变号偶数次。也就是说$n_1, n_2, \ldots, n_m$中的奇数的数目为一个偶数。所以
+$$p(f) = n_1 + n_2 + \cdots + n_m$$
+是一个偶数。同理可证，若$n+1$次多项式$f(x)$的最高次项系数$a_{n+1}$与常数项$a_0$异号，则$f(x)$的正实根数目为奇数。
+
+最后，我们需要证明$s(f) - p(f) \geqslant 0.$ 考虑$f(x)$的微商$f'(x).$ 它是一个$n$次实系数多项式，而且系数符号都不变（除了$a_0$变为0）。于是$s(f) = s(f') + 1,$ 或者$s(f) = s(f').$ 另一方面，由于$f(x)$有$p(f)$个正实根。当其中有$m > 1$个互异实根，它们构成了$m - 1$个闭区间。由微分中值定理，这些区间上都至少有一个点满足$f'(x) = 0.$ 而对于其中的每个$k$重根($k > 1$)都是$f'(x)$的至少$k-1$重根。于是有$p(f') \geqslant p(f) - 1.$ 当$p(f) \leqslant 1$时，$p(f') \geqslant p(f) - 1$平凡成立。对$f'(x)$用归纳假设，有
 $$s(f) \geqslant s(f') \geqslant p(f') \geqslant p(f) - 1,$$
 即$s(f) - p(f) \geqslant -1.$ 由于$s(f) - p(f)$为偶数，所以上述不等式实际上为$s(f) - p(f) \geqslant 0.$
 
@@ -167,7 +179,32 @@ $\lambda_i^n = \mu_{ij(i)}^n = \lambda_i,$ 此时必有$\lambda_i$为零或为$n
 
 若$k_i \neq i,$ 我们可以考虑序列
 $$k^{(0)}(i) := i, ~~ k^{(1)}(i) := k(i), ~~ k^{(2)}(i) := k(k(i)), ~~ \ldots$$
-此序列前$m+1$个元素内必然出现重复的元素，不妨设有$k^{(a)}(i) = k^{(b)}(i),$ $0 \leqslant a < b \leqslant m+1,$ 那么会有
+此序列前$m+1$个元素内必然出现重复的元素：
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\node[circle, fill, inner sep=2] at (0, -1) (p0) {};
+\node[above=0.1 of p0.north] {$k^{(0)}(i)$};
+\node[circle, fill, inner sep=2] at (3, 0) (p1) {};
+\node[above=0.1 of p1.north] {$k^{(1)}(i)$};
+\node[circle, fill, inner sep=2] at (6, 0) (p2) {};
+\node[above=0.1 of p2.north] {$k^{(a)}(i)$};
+\node[circle, fill, inner sep=2] at (7.5, -2) (p3) {};
+\node[right=0.1 of p3.east] {$k^{(a+1)}(i)$};
+\node[circle, fill, inner sep=2] at (6.5, -3.5) (p4) {};
+\node[right=0.1 of p4.east] {$k^{(a+2)}(i)$};
+\node[circle, fill, inner sep=2] at (5, -3.5) (p5) {};
+\node[below=0.1 of p5.south] {$k^{(a+3)}(i)$};
+\node[circle, fill, inner sep=2] at (3.5, -1.5) (p6) {};
+\node[left=0.1 of p6.west] {$k^{(b)}(i)$};
+\draw (p0) -- (p1);
+\draw[dashed] (p1) -- (p2);
+\draw (p2) -- (p3) -- (p4) -- (p5);
+\draw[dashed] (p5) -- (p6);
+\draw (p6) -- (p2);
+\end{tikzpicture}
+\end{figure}
+不妨设有$k^{(a)}(i) = k^{(b)}(i),$ $0 \leqslant a < b \leqslant m+1,$ 那么会有
 $$\mu_{k^{(b)}(i)j^{(b)}(i)} = \lambda_{k^{(b-1)}(i)} = \mu_{k^{(b-1)}(i)j^{(b-1)}(i)}^n = \cdots = \lambda_{k^{(a)}(i)}^{n(b-a-1)}.$$
 ($j^{(*)}(i)$的定义类似$k^{(*)}(i)$) 两边同时$n$次方之后有
 $$\lambda_{k^{(a)}(i)}^{n(b-a)} = \mu_{k^{(b)}(i)j^{(b)}(i)}^n = \lambda_{k^{(b)}(i)} = \lambda_{k^{(a)}(i)},$$
